[gd_scene load_steps=8 format=2]

[ext_resource path="res://Effects/HealEffect.gd" type="Script" id=1]
[ext_resource path="res://Assets/effectHeal-Sheet.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Animate",
"speed": 10.0
} ]

[node name="HealEffect" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Animate"

[node name="Duration" type="Timer" parent="."]

[connection signal="isOver" from="." to="." method="_on_HealEffect_isOver"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
